--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 				</div>
 				<div class="row">
 					<div class="core-features">
-						<div class="grid2 to-animate" style="background-image: url(/Users/aki/Downloads/akiblog画像/crowd-1056764_640.jpg);">
+						<div class="grid2 to-animate" style="background-image: url(https://user-images.githubusercontent.com/57295201/74033869-67c77d00-49fa-11ea-90dc-f016d5a70883.jpg);">
 						</div>
 						<div class="grid2">
 							<div class="core-f">
@@ -197,7 +197,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 text-center">
-						<div class="project-grid to-animate-2" style="background-image:  url(/Users/aki/Downloads/azrul-aziz-DsvY9NRykRg-unsplash.jpg);">
+						<div class="project-grid to-animate-2" style="background-image:  url(https://user-images.githubusercontent.com/57295201/74034090-e6bcb580-49fa-11ea-8718-3ce036725b2f.jpg);">
 							<div class="desc">
 								<h3><a href="">on the sea</a></h3>
 								<span>By: Aki</span>
@@ -205,7 +205,7 @@
 						</div>
 					</div>
 					<div class="col-md-12 text-center">
-						<div class="project-grid to-animate-2" style="background-image:  url(/Users/aki/Downloads/mahkeo-OcxlTBbb6SY-unsplash.jpg);">
+						<div class="project-grid to-animate-2" style="background-image:  url(https://user-images.githubusercontent.com/57295201/74034203-2a172400-49fb-11ea-8ca8-33ef87c0ce77.jpg);">
 							<div class="desc">
 								<h3><a href="#">Sunset</a></h3>
 								<span>By: Aki</span>
@@ -213,7 +213,7 @@
 						</div>
 					</div>
 					<div class="col-md-12 text-center">
-						<div class="project-grid to-animate-2" style="background-image:  url(/Users/aki/Downloads/toys-1903273_640.jpg);">
+						<div class="project-grid to-animate-2" style="background-image:  url(https://user-images.githubusercontent.com/57295201/74034120-fcca7600-49fa-11ea-8035-77b89223576d.jpg);">
 							<div class="desc">
 								<h3><a href="#">Rainy Day</a></h3>
 								<span>By: Aki</span>
@@ -221,7 +221,7 @@
 						</div>
 					</div>
 					<div class="col-md-12 text-center">
-						<div class="project-grid to-animate-2" style="background-image:  url(/Users/aki/Downloads/akiblog画像/couple-1850073_640.jpg);">
+						<div class="project-grid to-animate-2" style="background-image:  url(https://user-images.githubusercontent.com/57295201/74033949-9c3b3900-49fa-11ea-89f7-7e3c9de61ef9.jpg);">
 							<div class="desc">
 								<h3><a href="#">Sunset Wedding</a></h3>
 								<span>By: Aki</span>
@@ -229,7 +229,7 @@
 						</div>
 					</div>
 					<div class="col-md-12 text-center">
-						<div class="project-grid to-animate-2" style="background-image:  url(/Users/aki/Downloads/akiblog画像/night-4489410_640.jpg);">
+						<div class="project-grid to-animate-2" style="background-image:  url(https://user-images.githubusercontent.com/57295201/74033987-b248f980-49fa-11ea-87f0-c2673b179705.jpg);">
 							<div class="desc">
 								<h3><a href="#">Star festival</a></h3>
 								<span>By: Aki</span>
@@ -237,7 +237,7 @@
 						</div>
 					</div>
 					<div class="col-md-12 text-center">
-						<div class="project-grid to-animate-2" style="background-image:  url(/Users/aki/Downloads/akiblog画像/utah-440520_640.jpg);">
+						<div class="project-grid to-animate-2" style="background-image:  url(https://user-images.githubusercontent.com/57295201/74034011-be34bb80-49fa-11ea-815c-ef04b3bed88c.jpg);">
 							<div class="desc">
 								<h3><a href="#">Mountain sunset</a></h3>
 								<span>By: Aki</span>
